@@ -1,3 +1,11 @@
+2023-01-19 Philipp Klaus Krause <pkk AT spth.de>
+
+	* device/lib/*/crt0.s,
+	  src/SDCCglue.c,
+	  src/stm8/main.c,
+	  .version:
+	  Patch #453 by Basil Hussain to further harmonize __sdcc_external_startup (RFE #859).
+
 2023-01-17 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/gcc-torture-execute-va-arg-5.c:
